tests/class_variance/class_variance.exp
Error ----------------------------------------------------------------------------------------------------- test.js:5:23

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test.js:5:23
   5| class B<+T> extends A<T> {} // Error: T used invariantly.
                            ^

References:
   test.js:5:10
   5| class B<+T> extends A<T> {} // Error: T used invariantly.
               ^ [1]


Error --------------------------------------------------------------------------------------------- test_keyword.js:5:26

Cannot use `T` [1] in an input/output position because `T` [1] is expected to occur only in output positions.
[incompatible-variance]

   test_keyword.js:5:26
   5| class B<out T> extends A<T> {} // Error: T used invariantly.
                               ^

References:
   test_keyword.js:5:13
   5| class B<out T> extends A<T> {} // Error: T used invariantly.
                  ^ [1]



Found 2 errors
